Added a dynamic view to be returned by the Welcome method in Hello World controller

--- a/MvcMovies/Views/HelloWorld/Index.cshtml
+++ b/MvcMovies/Views/HelloWorld/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Film List";
 }
 
-    <h2>Index of Hello World</h2>
+    <h2>My Film List</h2>
     <p>Hello World Controller!</p>
 
