--- a/MvcMovies/Views/Films/Index.cshtml
+++ b/MvcMovies/Views/Films/Index.cshtml
@@ -11,7 +11,10 @@
 </p>
 
 <h2>Search for a Film</h2>
-<form asp-controller="Films" asp-action="Index">
+
+@*adding GET as the form's method ensures that the search string will be added to the URL as query string. So the user*@
+@*can save the page and share it*@
+<form asp-controller="Films" asp-action="Index" method="get">
     <p>
         @* search bar*@
         Title: <input type="text" name="SearchString">
